--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.k3.rpc</groupId>
+    <groupId>com.michael.rpc</groupId>
     <artifactId>rpc</artifactId>
     <version>1.0.0</version>
 
